Provided JDK 9 compatibility after v0.14 merge